Sistema funcionando completo con seguridad y roles